--- a/index/sass/Layout/_courses.scss
+++ b/index/sass/Layout/_courses.scss
@@ -19,15 +19,27 @@
             display: grid;
             grid-template-columns: auto;
         }
-    }
-    .options{
-        border: 2px solid green;
+        .left-bloc{
+            display: none;
+        }
     }
 }
+@include u.breakpoint(tablet){
+    .cours-enregistree{
+        padding: 10px;
+        
+    .first-item{
+        h3{
+            margin-bottom: 10px;
+        }
+        display: grid;
+    }
 
+    } 
+}
 @include u.breakpoint(mobile){
     .allitems{
-        .ecole{
+        .cours{
             display: flex;
             flex-direction: column;
             gap: 8px;
@@ -42,8 +54,9 @@
         padding-right: 10px;
         padding-left: 10px;
     } 
-    .ecole-enregistree{
+    .cours-enregistree{
         padding: 10px;
+        
     } 
     .allitems{
         .items{
