--- a/index/sass/Global/_template.scss
+++ b/index/sass/Global/_template.scss
@@ -10,6 +10,7 @@ body{
 section{
     display: grid;
     grid-template-columns: 20% auto;
+    
 }
 .left-bloc{
     height: 100vh;
@@ -32,7 +33,8 @@ section{
                 box-shadow: 0px 0px 1px 0px var(--gray);
             }
         }
-        .options{
+        
+        .course-link{
             padding: 10px;
             padding-left: 30px;
             background-color: var(--whiteColor);
@@ -69,7 +71,6 @@ section{
             background-color: var(--whiteColor);
             .items{
                 margin-top: 25px;
-                border: 2px solid red;
                 div{
                     @include display_flex;
                     gap: 10px;
@@ -79,16 +80,14 @@ section{
                     &:hover{
                         background-color: var(--principalcolor);
                         box-shadow: 0px 0px 1px 0px var(--gray);
-                        border: 2px solid blue;
                     }
                 }
                 
-                .school{
+                .course-link{
                     padding: 10px;
                     padding-left: 30px;
                     background-color: var(--principalcolor);
                     box-shadow: 0px 0px 1px 0px var(--gray);
-                    border: 2px solid green;
                 }
                 .logout{
                     margin-top: 100px;
@@ -100,7 +99,7 @@ section{
         }
     }
 
-    .add-school{
+    .add-course{
         padding: 10px 20px;
         border-radius: 20px;
         background-color: var(--whiteColor);
@@ -108,7 +107,7 @@ section{
     }
 
 }
-.ecole-enregistree{
+.cours-enregistree{
     padding: 20px;
 
     .first-item{
@@ -124,15 +123,28 @@ section{
     }
 }
 .allitems{
-    padding: 10px;
+    padding: 15px;
     margin-top: 10px;
     border-radius: 5px;
     background-color: var(--whiteColor);
     box-shadow: 0px 0px 3px 0px var(--gray);
-    .ecole{
+    .active{
+        @include display_flex;
+        gap: 8px;
+        justify-content: flex-end;
+        a{
+            color: var(--gray);
+        }
+        h4{
+            width: 8px;
+            height: 8px;
+            background-color: var(--green);
+            border-radius: 50%;
+        }
+    }
+    .cours{
         @include display_flex;
         justify-content: space-between;
-        padding: 8px;
         div{
             @include display_flex;
             gap: 10px;
