--- a/index/sass/Global/_typography.scss
+++ b/index/sass/Global/_typography.scss
@@ -1,5 +1,5 @@
 @use '../Utils/' as u;
-
+@use '../Utils/mixins' as *;
 *,
 ::before,
 ::after{
@@ -44,4 +44,15 @@ img{
     border: 2px solid var(--white);
     width: 25px;
     border: 1px solid var(--blackColor); 
+}
+
+select{
+    @include input_properties(); 
+}
+button{
+    background-color: rgba(0, 0, 0, 0.521);
+    color: var(--whiteColor);
+    border-radius: 5px;
+    border: 0.5px solid var(--gray);
+    padding: 8px;
 }
