--- a/index/css/index.css
+++ b/index/css/index.css
@@ -46,7 +46,7 @@ section {
   background-color: var(--whiteColor);
   box-shadow: 0px 0px 1px 0px var(--gray);
 }
-.left-bloc .items .school {
+.left-bloc .items .course-link {
   padding: 10px;
   padding-left: 30px;
   background-color: var(--whiteColor);
@@ -97,7 +97,7 @@ section {
   background-color: var(--principalcolor);
   box-shadow: 0px 0px 1px 0px var(--gray);
 }
-.header .menu .nav-menu .items .school {
+.header .menu .nav-menu .items .course-link {
   padding: 10px;
   padding-left: 30px;
   background-color: var(--principalcolor);
@@ -109,34 +109,34 @@ section {
 .header .menu .nav-menu .items .logout i {
   font-size: 16px;
 }
-.header .add-school {
+.header .add-course {
   padding: 10px 20px;
   border-radius: 20px;
   background-color: var(--whiteColor);
   box-shadow: 0px 0px 1px 0px var(--gray);
 }
 
-.ecole-enregistree {
+.cours-enregistree {
   padding: 20px;
 }
-.ecole-enregistree .first-item {
+.cours-enregistree .first-item {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
-.ecole-enregistree .first-item div {
+.cours-enregistree .first-item div {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px;
 }
-.ecole-enregistree .first-item div p {
+.cours-enregistree .first-item div p {
   color: var(--gray);
 }
 
 .allitems {
-  padding: 10px;
+  padding: 15px;
   margin-top: 10px;
   border-radius: 5px;
   background-color: var(--whiteColor);
@@ -158,22 +158,22 @@ section {
   background-color: var(--green);
   border-radius: 50%;
 }
-.allitems .ecole {
+.allitems .cours {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
-.allitems .ecole div {
+.allitems .cours div {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px;
 }
-.allitems .ecole div a {
+.allitems .cours div a {
   color: var(--blueColor);
 }
-.allitems .ecole div div h2 {
+.allitems .cours div div h2 {
   height: 15px;
   border: 1px solid var(--blueColor);
 }
@@ -222,6 +222,21 @@ img {
   border: 1px solid var(--blackColor);
 }
 
+select {
+  background-color: var(--whiteColor);
+  border-radius: 5px;
+  border: 0.5px solid var(--gray);
+  padding: 8px;
+}
+
+button {
+  background-color: rgba(0, 0, 0, 0.521);
+  color: var(--whiteColor);
+  border-radius: 5px;
+  border: 0.5px solid var(--gray);
+  padding: 8px;
+}
+
 @media screen and (max-width: 978px) and (max-width: 900px) {
   .header .menu i {
     display: initial;
@@ -240,14 +255,25 @@ img {
     display: none;
   }
 }
+@media (max-width: 768px) {
+  .cours-enregistree {
+    padding: 10px;
+  }
+  .cours-enregistree .first-item {
+    display: grid;
+  }
+  .cours-enregistree .first-item h3 {
+    margin-bottom: 10px;
+  }
+}
 @media (max-width: 480px) {
-  .allitems .ecole {
+  .allitems .cours {
     display: flex;
     flex-direction: column;
     gap: 8px;
     align-items: start;
   }
-  .allitems .ecole div {
+  .allitems .cours div {
     display: flex;
     justify-content: flex-end;
   }
